# agentic-travel-agent

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_gemini_key.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: agent.py  llm_selector.py
agents/tools/: flights_finder.py  hotels_finder.py  itinerary_builder.py
